fix qrcode responsive align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -445,8 +445,10 @@
     background-color: $grey-color-light;
     border-radius: 10px;
     box-shadow: 0 5px 5px 0 $grey-color;
-    left: 10%;
-    top: 10%;
+    top: 50%;
+    left: 50%;
+    margin-left: -160px;
+    margin-top: -165px;
     width: 320px;
     height: 330px;
 }
